Database Product Tablosu işleri , DbSet , Context , Mapping işlemleri

--- a/NTAC.Northwind.DataAccess/NTAC.Northwind.DataAccess.csproj
+++ b/NTAC.Northwind.DataAccess/NTAC.Northwind.DataAccess.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NTAC.Core\NTAC.Core.csproj" />
+    <ProjectReference Include="..\NTAC.Northwind.Entities\NTAC.Northwind.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
