N Tier  And Core Framework

--- a/NTAC.DataAccess.TestsDDDD/NTAC.DataAccess.TestsDDDD.csproj
+++ b/NTAC.DataAccess.TestsDDDD/NTAC.DataAccess.TestsDDDD.csproj
@@ -49,11 +49,21 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="EntityFrameworkTests\EntityFrameworkTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NTAC.Northwind.DataAccess\NTAC.Northwind.DataAccess.csproj">
+      <Project>{cf7caaef-2a38-4340-b6cb-d84dc27e70f0}</Project>
+      <Name>NTAC.Northwind.DataAccess</Name>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
